# wordmem

./: .eslintrc.js  README.md  package-lock.json  package.json  rollup.config.js
public/: index.html
src/: App.svelte  ChoicesQuiz.svelte  Quiz.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/quizes/testquiz1/: data.yaml  info.yaml
src-tauri/quizes/testquiz2/: info.yaml
src-tauri/src/: main.rs
